<resources>
    <string name="app_name" translatable="false">CorsixTH</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="welcome_header">Welcome to CorsixTH!</string>
    <string name="welcome_text">You are almost ready to start playing, but there are a few things that we must configure first.</string>
    <string name="no_external_storage">External storage isn\'t available! Please make sure that your device is unplugged from your computer and that your SD card is inserted (if applicable). Then restart the app.</string>
    <string name="setup_wizard_dialog">The setup wizard will run again when you next launch the game.</string>
    <string name="previousButton">Previous</string>
    <string name="nextButton">Next</string>
    <string name="advanced_settings_header">Advanced Settings</string>
    <string name="advanced_settings_text">Advanced users can play around with these, but they\'re best kept to defaults.</string>
    <string name="enable_debug_mode">Enable Debug Mode</string>
    <string name="enable_custom_scripts">Enable Custom Scripts</string>
    <string name="enable_advanced_settings">Enable Advanced Settings</string>
    <string name="audio_header">Audio</string>
    <string name="audio_text">The game is much better with audio, but may cause the game to run slower on less powerful devices.</string>
    <string name="enable_audio">Enable Audio</string>
    <string name="enable_sound_fx">Enable Sound FX</string>
    <string name="enable_announcer">Enable Announcer</string>
    <string name="enable_music">Enable Music</string>
    <string name="display_resolution_header">Display Resolution</string>
    <string name="display_resolution_text">Native resolution may look better, but the UI could be too small to use if you have a screen with a large DPI. If in doubt, choose default.</string>
    <string name="default_resolution">Default (640x480)</string>
    <string name="download_demo">Download Demo</string>
    <string name="original_files_header">Original Theme Hospital Files</string>
    <string name="original_files_text">You should place the original Theme Hospital files on your device in a directory called \'th\', or choose an alternative below.</string>
    <string name="native_resolution">Native</string>
    <string name="custom_resolution">Custom</string>
    <string name="custom_files">Custom</string>
    <string name="default_files">Automatically Detect</string>
    <string name="header_image_description">Header</string>
    <string name="preparing_game_files_dialog">Preparing Game Files. This only needs to run once, but may take a while.</string>
    <string name="download_demo_dialog">This will download and install the Theme Hospital demo which will give you access to the basic functionality of the game.</string>
    <string name="download_demo_error">There was a problem downloading the demo files!</string>
    <string name="downloading_demo">Downloading demo files…</string>
    <string name="extracting_demo">Unpacking demo files…</string>
    <string name="demo_url" translatable="false">http://www.armedpineapple.co.uk/downloads/Theme+Hospital+Demo</string>
    <string name="timidity_url" translatable="false">http://www.armedpineapple.co.uk/downloads/Timidity</string>
    <string name="language_header">Language</string>
    <string name="language_text">CorsixTH supports multiple languages. Please choose from the supported languages below.</string>
    <string name="downloading_timidity">Downloading file…</string>
    <string name="download_timidity_error">Error downloading file. Music will not be available. Please try again later."</string>
    <string name="extracting_timidity">Unpacking files…</string>
    <string name="music_download_dialog">Music requires an additional download. Download file (14.1MB)?</string>
    <string name="pause">Pause</string>
    <string name="setup_wizard">Setup Wizard</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="no_connection_error">You need an active internet connection to download. Please connect to a network and try again.</string>
    <string name="cancel">Cancel</string>
    <string name="new_save">New Save</string>
    <string name="no_music_dialog">Your game files don\'t appear to have music included, therefore music could not be enabled. Please make sure you copied the music \'Sound\' directory over.</string>
    <string name="no_data_dialog">Cannot locate game files. Please ensure that you have copied them over to a directory called \'th\' on your device, or specified a valid directory.</string>
    <string name="speed_slowest">Slowest</string>
    <string name="speed_default">Default</string>
    <string name="speed_fastest">Fastest</string>
    <string name="load_last_save">Resume previous game?</string>
    <string name="autosave_name" translatable="false">cthandroidautosave.sav</string>
    <string name="quicksave_name" translatable="false">quicksave.sav</string>
    <string name="save_game_dialog_title">Save Game</string>
    <string name="save_game_dialog_message">Please enter a save game name</string>
    <string name="load_game_dialog_title">Load Game</string>
    <string name="menuitem_change_game_speed">Change Game Speed</string>
    <string name="menuitem_quickload">Quick Load</string>
    <string name="menuitem_quicksave">Quick Save</string>
    <string name="menuitem_load">Load Game</string>
    <string name="menuitem_save">Save Game</string>
    <string name="menuitem_restart">Restart Level</string>
    <string name="menuitem_about">About</string>
    <string name="menuitem_exit">Exit Game</string>
    <string name="about_dialog_header">About</string>
    <string name="gamespeed_dialog_header">Set Game Speed</string>
    <string name="play_button">Play!</string>
    <string name="custom_location_message">Theme Hospital Game Files location</string>
    <string name="game_paused">Game Paused</string>
    <string name="load_error">CorsixTH could not load. The setup wizard will run again when you next start the app.</string>
	<string name="no_quicksave">No quicksave to load!</string>
	<string name="dialog_error_title">Error!</string>
	<string name="recent_changes_title">Recent Changes</string>
	<string name="height">Height</string>
	<string name="width">Width</string>
	<string name="enter_resolution">Enter Resolution</string>
	<string name="search_cancelled">Search cancelled</string>
	<string name="couldnt_find_game_files">Couldn\'t find game files. Please set location manually or download the demo</string>
	<string name="found_files">Found files in: </string>
	<string name="searching">Searching...</string>
    <string name="menuitem_settings">Settings</string>
    <string name="dialog_require_restart">You must restart the game for some of these changes take effect</string>
    <string name="off">Off</string>
    <string name="preferences_run_setup_wizard">Run Setup Wizard</string>
    <string name="preferences_settings">Settings</string>
    <string name="preferences_gameplay_preferences">Gameplay preferences</string>
    <string name="preferences_language">Language</string>
    <string name="preferences_edge_scrolling">Edge Scrolling</string>
    <string name="preferences_adviser">Adviser</string>
    <string name="preferences_audio_preferences">Audio preferences</string>
    <string name="preferences_audio">Audio</string>
    <string name="preferences_global_audio">Global Audio</string>
    <string name="preferences_announcer">Announcer</string>
    <string name="preferences_announcer_disabled">Announcer Disabled</string>
    <string name="preferences_announcer_enabled">Announcer Enabled</string>
    <string name="preferences_audio_on">Audio is on</string>
    <string name="preferences_audio_off">Audio is off</string>
    <string name="preferences_adviser_disabled">Adviser Disabled</string>
    <string name="preferences_adviser_enabled">Adviser Enabled</string>
    <string name="preferences_game">Game</string>
    <string name="preferences_setup_wizard">Setup Wizard</string>
    <string name="preferences_edge_scrolling_off">Edge scrolling is off</string>
    <string name="preferences_edge_scrolling_on">Edge scrolling is on</string>
    <string name="preferences_announcer_volume">Announcer Volume</string>
    <string name="preferences_music">Music</string>
    <string name="preferences_music_disabled">Music Disabled</string>
    <string name="preferences_music_enabled">Music Enabled</string>
    <string name="preferences_music_volume">Music Volume</string>
    <string name="preferences_sound_fx">Sound FX</string>
    <string name="preferences_sound_fx_disabled">Sound FX Disabled</string>
    <string name="preferences_sound_fx_enabled">Sound FX Enabled</string>
    <string name="preferences_sound_fx_volume">Sound FX Volume</string>
    <string name="preferences_display_preferences">Display preferences</string>
    <string name="preferences_display">Display</string>
    <string name="preferences_resolution">Resolution Mode
</string>
    <string name="preferences_width">Width</string>
    <string name="preferences_height">Height</string>
    <string name="preferences_advanced_preferences">Advanced preferences</string>
    <string name="preferences_advanced">Advanced</string>
    <string name="preferences_debug_mode_disabled">Debug Mode Disabled</string>
    <string name="preferences_debug_mode_enabled">Debug Mode Enabled</string>
    <string name="preferences_debug_mode">Debug mode</string>
    <string name="preferences_not_tracking_fps">Not Tracking FPS</string>
    <string name="preferences_tracking_fps">Tracking FPS</string>
    <string name="preferences_track_fps">Track FPS</string>
    <string name="preferences_keep_screen_on_off">Will not keep screen on during play</string>
    <string name="preferences_keep_screen_on_on">Will keep screen on during play</string>
    <string name="preferences_keep_screen_on">Keep Screen On</string>
    <string name="preferences_experimental_features">Experimental Features</string>
    <string name="preferences_experimental">Experimental</string>
    <string name="preferences_fps_limiter">FPS Limiter</string>
    <string name="preferences_reduce_cpu">Reduce CPU usage and improve battery life</string>
    <string name="preferences_localisation">Localisation</string>
    <string name="preferences_edgescrollsummary">The amount of space at the screen edges for scrolling</string>
    <string name="preferences_edge_border_size">Edge Border Size</string>
    <string name="preferences_custom_resolution">Custom Resolution</string>
    <string name="preferences_debug">Debug</string>
    <string name="preferences_performance">Performance</string>
    <string name="preferences_movies">Movies</string>
    <string name="preferences_play_movies">Play Movies</string>
    <string name="preferences_movies_disabled">Movies Disabled</string>
    <string name="preferences_movies_enabled">Movies Enabled</string>
    <string name="preferences_intro_movie_disabled">Intro Movie Disabled</string>
    <string name="preferences_intro_movie_enabled">Intro Movie Enabled</string>
    <string name="preferences_play_intro_movie">Play Intro Movie</string>
    <string name="download_progress_dialog_text">%1$d MB of %2$d MB</string>
</resources>