<?xml version="1.0" encoding="utf-8"?>
<uk.co.armedpineapple.corsixth.wizard.AudioWizard xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/audioHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/audio_header"
        android:textAppearance="@style/WizardHeaderText" />

    <TextView
        android:id="@+id/audioText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/audioHeader"
        android:gravity="center_horizontal"
        android:text="@string/audio_text"
        android:textAppearance="@style/WizardText" />

    <CheckBox
        android:id="@+id/audioCheck"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/audioText"
        android:layout_marginLeft="24dp"
        android:text="@string/enable_audio" />

    <CheckBox
        android:id="@+id/fxCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/audioCheck"
        android:layout_alignBottom="@+id/audioCheck"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/audioCheck"
        android:enabled="false"
        android:text="@string/enable_sound_fx" />

    <CheckBox
        android:id="@+id/announcerCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fxCheck"
        android:layout_below="@+id/fxCheck"
        android:enabled="false"
        android:text="@string/enable_announcer" />

    <CheckBox
        android:id="@+id/musicCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/announcerCheck"
        android:layout_below="@+id/announcerCheck"
        android:enabled="false"
        android:text="@string/enable_music" />

</uk.co.armedpineapple.corsixth.wizard.AudioWizard>