<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gamespeed_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp" >

    <SeekBar
        android:id="@+id/gamespeed_seek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:max="5" />

    <TextView
        android:id="@+id/gamespeed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gamespeed_seek"
        android:layout_centerHorizontal="true"
        android:text="@string/speed_default"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/gamespeed_text"
        android:text="@string/speed_slowest"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gamespeed_seek"
        android:text="@string/speed_fastest"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/gamespeed_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gamespeed_text"
        android:layout_centerHorizontal="true"
        android:text="@string/set_speed" />

</RelativeLayout>